Feature: Implementing Header version 01

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Eduardo Godoy</title>
     <link rel="stylesheet" href="css/geral.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +21,11 @@
             </ul>
         </section>
     </header>
-
+    <footer>
+        <section class="e-footer">
+            <p></p>
+        </section>
+    </footer>
     <script src="js/geral.js"></script>
 </body>
 
