Feature: Implementing Footer and Tecnologys sections

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,58 @@
             </ul>
         </section>
     </header>
+    <main>
+        <section>
+            <div class="e-tecnology">
+                <div class="e-tecnology__content">
+                    <p>Tecnologias que tenho conhecimento</p>
+                    <ul class="e-tecnology__content__list">
+                        <li class="e-tecnology__content__list__item">
+                            <img src="imagens/html5.png" />
+                            <h2 class="e-tecnology__content__list__item__title">HTML5</h2>
+                            <p>Boas práticas de programação com tags semânticas para melhor indexação do site
+                                (Experiência em técnicas SEO).</p>
+                        </li>
+                        <li class="e-tecnology__content__list__item">
+                            <img src="imagens/css.png" />
+                            <h2 class="e-tecnology__content__list__item__title">CSS3</h2>
+                            <p>Utilizo boas práticas de programação com o padrão BEM e auxílio do pré-processador SASS.
+                            </p>
+                        </li>
+                        <li class="e-tecnology__content__list__item">
+                            <img src="imagens/sass.png" />
+                            <h2 class="e-tecnology__content__list__item__title">SASS</h2>
+                            <p>Experiência com pré-processador o SASS para melhor desempenho em ambientes de desenvolvimento.</p>
+                        </li>
+                        <li class="e-tecnology__content__list__item">
+                            <img src="imagens/gulp.png" />
+                            <h2 class="e-tecnology__content__list__item__title">Gulp</h2>
+                            <p>Experiência com o automatizador de tarefas Gulp e conhecimento na configuração do gulpfile.</p>
+                        </li>
+                        <li class="e-tecnology__content__list__item">
+                            <img src="imagens/javascript.png" />
+                            <h2 class="e-tecnology__content__list__item__title">JavaScript</h2>
+                            <p>Utilizo JavaScript para realização dos meus projetos com JQuery e padrão de escrita ES6.</p>
+                        </li>
+                        <li class="e-tecnology__content__list__item">
+                            <img src="imagens/nodejs.png" />
+                            <h2 class="e-tecnology__content__list__item__title">NodeJs</h2>
+                            <p>Conhecimento em Back-end com a tecnologia NodeJS.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <section class="e-footer">
-            <p></p>
+            <div class="e-footer__content">
+                <p>Eduardo Godoy - Desenvolvedor Front-end</p>
+                <p>Tecnologias utilizadas: SASS, HTML5 e JavaScript/ES6</p>
+                <p>Telefone: (11) 97238-4255</p>
+                <p>dudurossigodoy2010@gmail.com</p>
+                <p>Todos os direitos reservados © - 2019</p>
+            </div>
         </section>
     </footer>
     <script src="js/geral.js"></script>
