Feature: Implementing About and Projects sections

--- a/src/index.html
+++ b/src/index.html
@@ -7,21 +7,85 @@
     <title>Eduardo Godoy</title>
     <link rel="stylesheet" href="css/geral.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="imagens/js.png" sizes="32x32">
 </head>
 
 <body>
     <header>
         <section class="e-header">
             <ul class="e-header__list">
-                <li class="e-header__list__item"><span>Home</span></li>
-                <li class="e-header__list__item"><span>Sobre</span></li>
-                <li class="e-header__list__item"><span>Projetos</span></li>
-                <li class="e-header__list__item"><span>Serviços</span></li>
-                <li class="e-header__list__item"><span>Contato</span></li>
+                <li class="e-header__list__item">
+                    <h2 class="e-header__list__item__title">Home</h2>
+                </li>
+                <li class="e-header__list__item">
+                    <h2 class="e-header__list__item__title">Sobre</h2>
+                </li>
+                <li class="e-header__list__item">
+                    <h2 class="e-header__list__item__title">Projetos</h2>
+                </li>
+                <li class="e-header__list__item">
+                    <h2 class="e-header__list__item__title">Tecnologias</h2>
+                </li>
+                <li class="e-header__list__item">
+                    <h2 class="e-header__list__item__title">Contato</h2>
+                </li>
             </ul>
         </section>
     </header>
     <main>
+        <section>
+            <div class="e-about">
+                <div class="e-about__content">
+                    <div class="e-about__content__left">
+                        <img src="imagens/eduardo-godoy.png" />
+                        <h1 class="e-about__content__left__name">Eduardo Godoy</h1>
+                        <p>Desenvolvedor Front-end</p>
+                    </div>
+                    <div class="e-about__content__right">
+                        <span>Sobre mim</span>
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sou Desenvolvedor Front-end na <a target="_blank" href="https://www.econverse.digital/">Econverse Digital</a> há menos de um ano e procuro
+                            me atualizar diariamente ouvindo <span>poadcast</span> e fazendo cursos de programação na
+                            Alura. Realizo pequenos projetos para aplicar o conhecimento aprendido na prática e passar
+                            por dificuldades no desenvolvimento para fixar o conhecimento que aprendi. Atualmente
+                            estou estudando <span>NodeJS</span> para melhorar o meu conhecimento com Back-end e
+                            <span>banco de dados</span> relacionais e não-relacionais.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="e-projects">
+                <div class="e-projects__content">
+                    <p>Projetos que participei</p>
+                    <ul class="e-projects__content__list">
+                        <li class="e-projects__content__list__item">
+                            <img src="imagens/lamp.png" />
+                            <strong>Limpa Aí</strong>
+                            <p>Projeto desenvolvido no meu TCC com JPA</p>
+                            <a target="_blank" href="https://www.limpaai.com.br/">Ver Projeto</a>
+                        </li>
+                        <li class="e-projects__content__list__item">
+                            <img src="imagens/lamp.png" />
+                            <strong>Nestlé</strong>
+                            <p>Projeto desenvolvido na plataforma VTEX</p>
+                            <a target="_blank" href="https://www.nestle.com.br/">Ver Projeto</a>
+                        </li>
+                        <li class="e-projects__content__list__item">
+                            <img src="imagens/lamp.png" />
+                            <strong>Puket</strong>
+                            <p>Projeto desenvolvido na plataforma VTEX</p>
+                            <a target="_blank" href="https://www.puket.com.br/">Ver Projeto</a>
+                        </li>
+                        <li class="e-projects__content__list__item">
+                            <img src="imagens/lamp.png" />
+                            <strong>Bagaggio</strong>
+                            <p>Projeto desenvolvido na plataforma VTEX</p>
+                            <a target="_blank" href="https://www.bagaggio.com.br/">Ver Projeto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <section>
             <div class="e-tecnology">
                 <div class="e-tecnology__content">
@@ -31,33 +95,40 @@
                             <img src="imagens/html5.png" />
                             <h2 class="e-tecnology__content__list__item__title">HTML5</h2>
                             <p>Boas práticas de programação com tags semânticas para melhor indexação do site
-                                (Experiência em técnicas SEO).</p>
+                                (Experiência em técnicas <strong>SEO</strong>).</p>
                         </li>
                         <li class="e-tecnology__content__list__item">
                             <img src="imagens/css.png" />
                             <h2 class="e-tecnology__content__list__item__title">CSS3</h2>
-                            <p>Utilizo boas práticas de programação com o padrão BEM e auxílio do pré-processador SASS.
+                            <p>Utilizo boas práticas de programação com o padrão BEM e auxílio do
+                                <strong>pré-processador SASS</strong>.
                             </p>
                         </li>
                         <li class="e-tecnology__content__list__item">
                             <img src="imagens/sass.png" />
                             <h2 class="e-tecnology__content__list__item__title">SASS</h2>
-                            <p>Experiência com pré-processador o SASS para melhor desempenho em ambientes de desenvolvimento.</p>
+                            <p>Experiência com pré-processador o SASS para melhor desempenho em <strong>ambientes de
+                                    desenvolvimento</strong>.
+                            </p>
                         </li>
                         <li class="e-tecnology__content__list__item">
                             <img src="imagens/gulp.png" />
                             <h2 class="e-tecnology__content__list__item__title">Gulp</h2>
-                            <p>Experiência com o automatizador de tarefas Gulp e conhecimento na configuração do gulpfile.</p>
+                            <p>Experiência com o <strong>automatizador de tarefas</strong> Gulp e conhecimento na
+                                configuração do
+                                gulpfile.</p>
                         </li>
                         <li class="e-tecnology__content__list__item">
-                            <img src="imagens/javascript.png" />
+                            <img src="imagens/js.png" />
                             <h2 class="e-tecnology__content__list__item__title">JavaScript</h2>
-                            <p>Utilizo JavaScript para realização dos meus projetos com JQuery e padrão de escrita ES6.</p>
+                            <p>Utilizo JavaScript para realização dos <strong>meus projetos</strong> com JQuery e padrão
+                                de escrita ES6.
+                            </p>
                         </li>
                         <li class="e-tecnology__content__list__item">
                             <img src="imagens/nodejs.png" />
                             <h2 class="e-tecnology__content__list__item__title">NodeJs</h2>
-                            <p>Conhecimento em Back-end com a tecnologia NodeJS.</p>
+                            <p>Conhecimento em <strong>Back-end</strong> com a tecnologia NodeJS.</p>
                         </li>
                     </ul>
                 </div>
