--- a/src/index.html
+++ b/src/index.html
@@ -6,30 +6,38 @@
     <meta name="viewport" content="width=device-width">
     <title>Eduardo Godoy</title>
     <link rel="stylesheet" href="css/geral.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,900" rel="stylesheet" />
     <link rel="icon" type="image/png" href="imagens/js.png" sizes="32x32">
 </head>
 
 <body>
     <header>
         <section class="e-header">
-            <ul class="e-header__list">
-                <li class="e-header__list__item">
-                    <h2 class="e-header__list__item__title">Home</h2>
-                </li>
-                <li class="e-header__list__item">
-                    <h2 class="e-header__list__item__title">Sobre</h2>
-                </li>
-                <li class="e-header__list__item">
-                    <h2 class="e-header__list__item__title">Projetos</h2>
-                </li>
-                <li class="e-header__list__item">
-                    <h2 class="e-header__list__item__title">Tecnologias</h2>
-                </li>
-                <li class="e-header__list__item">
-                    <h2 class="e-header__list__item__title">Contato</h2>
-                </li>
-            </ul>
+            <div class="e-header__left">
+                <img src="imagens/eduardo-godoy.png" />
+                <a href="/">Eduardo Godoy</a>
+            </div>
+            <div class="e-header__right">
+                <ul class="e-header__right__list">
+                    <li class="e-header__right__list__item">
+                        <h2 class="e-header__right__list__item__title">Sobre</h2>
+                    </li>
+                    <li class="e-header__right__list__item">
+                        <h2 class="e-header__right__list__item__title">Projetos</h2>
+                    </li>
+                    <li class="e-header__right__list__item">
+                        <h2 class="e-header__right__list__item__title">Tecnologias</h2>
+                    </li>
+                    <li class="e-header__right__list__item">
+                        <h2 class="e-header__right__list__item__title">Contato</h2>
+                    </li>
+                </ul>
+            </div>
+            <div class="e-header__mobile">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </section>
     </header>
     <main>
@@ -43,7 +51,8 @@
                     </div>
                     <div class="e-about__content__right">
                         <span>Sobre mim</span>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sou Desenvolvedor Front-end na <a target="_blank" href="https://www.econverse.digital/">Econverse Digital</a> há menos de um ano e procuro
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sou Desenvolvedor Front-end na <a target="_blank"
+                                href="https://www.econverse.digital/">Econverse Digital</a> há menos de um ano e procuro
                             me atualizar diariamente ouvindo <span>poadcast</span> e fazendo cursos de programação na
                             Alura. Realizo pequenos projetos para aplicar o conhecimento aprendido na prática e passar
                             por dificuldades no desenvolvimento para fixar o conhecimento que aprendi. Atualmente
@@ -59,28 +68,46 @@
                     <p>Projetos que participei</p>
                     <ul class="e-projects__content__list">
                         <li class="e-projects__content__list__item">
-                            <img src="imagens/lamp.png" />
+                            <img src="imagens/limpaai.png" />
                             <strong>Limpa Aí</strong>
                             <p>Projeto desenvolvido no meu TCC com JPA</p>
                             <a target="_blank" href="https://www.limpaai.com.br/">Ver Projeto</a>
                         </li>
                         <li class="e-projects__content__list__item">
-                            <img src="imagens/lamp.png" />
+                            <img src="imagens/nestle.png" />
                             <strong>Nestlé</strong>
                             <p>Projeto desenvolvido na plataforma VTEX</p>
                             <a target="_blank" href="https://www.nestle.com.br/">Ver Projeto</a>
                         </li>
                         <li class="e-projects__content__list__item">
-                            <img src="imagens/lamp.png" />
+                            <img src="imagens/puket.png" />
                             <strong>Puket</strong>
                             <p>Projeto desenvolvido na plataforma VTEX</p>
                             <a target="_blank" href="https://www.puket.com.br/">Ver Projeto</a>
                         </li>
                         <li class="e-projects__content__list__item">
-                            <img src="imagens/lamp.png" />
+                            <img src="imagens/meia-seda.png" />
+                            <strong>Meia de Seda</strong>
+                            <p>Projeto desenvolvido na plataforma VTEX</p>
+                            <a target="_blank" href="https://www.meiadeseda.com.br/">Ver Projeto</a>
+                        </li>
+                        <li class="e-projects__content__list__item">
+                            <img src="imagens/bagaggio.png" />
                             <strong>Bagaggio</strong>
                             <p>Projeto desenvolvido na plataforma VTEX</p>
                             <a target="_blank" href="https://www.bagaggio.com.br/">Ver Projeto</a>
+                        </li>
+                        <li class="e-projects__content__list__item">
+                            <img src="imagens/manias-maria.png" />
+                            <strong>Manias Da Maria</strong>
+                            <p>Projeto desenvolvido na plataforma VTEX</p>
+                            <a target="_blank" href="https://www.maniasdamaria.com.br/">Ver Projeto</a>
+                        </li>
+                        <li class="e-projects__content__list__item">
+                            <img src="imagens/doce-malu.png" />
+                            <strong>Doce Malu</strong>
+                            <p>Projeto desenvolvido na plataforma VTEX</p>
+                            <a target="_blank" href="https://www.docemalu.com.br/">Ver Projeto</a>
                         </li>
                     </ul>
                 </div>
@@ -142,11 +169,71 @@
                 <p>Tecnologias utilizadas: SASS, HTML5 e JavaScript/ES6</p>
                 <p>Telefone: (11) 97238-4255</p>
                 <p>dudurossigodoy2010@gmail.com</p>
+                <ul class="e-footer__content__social">
+                    <li>
+                        <a target="_blank" href="https://www.linkedin.com/in/eduardo-godoy-828221168/">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="35.267" height="33.706"
+                                viewBox="0 0 35.267 33.706">
+                                <g id="linkedin" transform="translate(0 -9.708)">
+                                    <g id="Grupo_4" data-name="Grupo 4" transform="translate(0 9.708)">
+                                        <rect id="Retângulo_9" data-name="Retângulo 9" width="7.577" height="22.754"
+                                            transform="translate(0.436 10.952)" />
+                                        <path id="Caminho_61" data-name="Caminho 61"
+                                            d="M172.285,141.937a8.155,8.155,0,0,0-6.314-2.606,9.1,9.1,0,0,0-2.629.356,5.966,5.966,0,0,0-2,1,8.554,8.554,0,0,0-2.193,2.408v-3.235H151.6l.023,1.1q.023,1.1.023,6.8t-.046,14.855h7.554v-12.7a5.546,5.546,0,0,1,.252-1.86,4.877,4.877,0,0,1,1.458-1.963,3.718,3.718,0,0,1,2.423-.793,3.267,3.267,0,0,1,2.9,1.366,6.643,6.643,0,0,1,.93,3.777v12.169h7.554V149.571Q174.672,144.542,172.285,141.937Z"
+                                            transform="translate(-139.405 -128.907)" />
+                                        <path id="Caminho_62" data-name="Caminho 62"
+                                            d="M4.271,9.708a4.323,4.323,0,0,0-3.088,1.114A3.7,3.7,0,0,0,0,13.634a3.763,3.763,0,0,0,1.148,2.8A4.144,4.144,0,0,0,4.179,17.56h.046a4.326,4.326,0,0,0,3.111-1.125,3.635,3.635,0,0,0,1.159-2.8,3.83,3.83,0,0,0-1.171-2.813A4.2,4.2,0,0,0,4.271,9.708Z"
+                                            transform="translate(0 -9.708)" />
+                                    </g>
+                                </g>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://github.com/maxtrodaro">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="36.739" height="35.209"
+                                viewBox="0 0 36.739 35.209">
+                                <path id="github"
+                                    d="M18.369.5A18.21,18.21,0,0,0,0,18.551,18.081,18.081,0,0,0,12.56,35.677c.918.17,1.255-.389,1.255-.868,0-.429-.015-1.564-.023-3.069C8.683,32.829,7.6,29.319,7.6,29.319a4.812,4.812,0,0,0-2.044-2.641c-1.664-1.119.129-1.1.129-1.1A3.843,3.843,0,0,1,8.5,27.442a3.956,3.956,0,0,0,5.35,1.5,3.822,3.822,0,0,1,1.163-2.414c-4.08-.452-8.367-2-8.367-8.92A6.9,6.9,0,0,1,8.54,12.766,6.316,6.316,0,0,1,8.7,7.989s1.538-.484,5.052,1.851a17.613,17.613,0,0,1,9.185,0c3.49-2.334,5.029-1.851,5.029-1.851a6.49,6.49,0,0,1,.184,4.778,6.924,6.924,0,0,1,1.883,4.843c0,6.934-4.294,8.461-8.381,8.9a4.283,4.283,0,0,1,1.24,3.34c0,2.416-.023,4.357-.023,4.943,0,.473.321,1.038,1.263.857a18.026,18.026,0,0,0,12.608-17.1A18.213,18.213,0,0,0,18.369.5Z"
+                                    transform="translate(0 -0.5)" />
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.instagram.com/edu_rossi_godoy/">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35">
+                                <g id="instagram" transform="translate(-77.1 -77.1)">
+                                    <path id="Caminho_58" data-name="Caminho 58"
+                                        d="M94.6,80.25c4.676,0,5.224.02,7.072.1a9.549,9.549,0,0,1,3.248.606,5.328,5.328,0,0,1,2.015,1.311,5.448,5.448,0,0,1,1.311,2.015,9.549,9.549,0,0,1,.606,3.248c.088,1.849.1,2.4.1,7.072s-.02,5.224-.1,7.072a9.548,9.548,0,0,1-.606,3.248,5.329,5.329,0,0,1-1.311,2.015,5.448,5.448,0,0,1-2.015,1.311,9.549,9.549,0,0,1-3.248.606c-1.849.088-2.4.1-7.072.1s-5.224-.02-7.072-.1a9.549,9.549,0,0,1-3.248-.606,5.329,5.329,0,0,1-2.015-1.311,5.447,5.447,0,0,1-1.311-2.015,9.549,9.549,0,0,1-.606-3.248c-.088-1.849-.1-2.4-.1-7.072s.02-5.224.1-7.072a9.549,9.549,0,0,1,.606-3.248,5.328,5.328,0,0,1,1.311-2.015,5.447,5.447,0,0,1,2.015-1.311,9.549,9.549,0,0,1,3.248-.606c1.849-.078,2.4-.1,7.072-.1m0-3.15c-4.754,0-5.351.02-7.219.108a12.948,12.948,0,0,0-4.245.812,8.684,8.684,0,0,0-3.1,2.015,8.473,8.473,0,0,0-2.015,3.1,13,13,0,0,0-.812,4.245c-.088,1.868-.108,2.465-.108,7.219s.02,5.351.108,7.219a12.948,12.948,0,0,0,.812,4.245,8.684,8.684,0,0,0,2.015,3.1,8.473,8.473,0,0,0,3.1,2.015,13,13,0,0,0,4.245.812c1.868.088,2.465.108,7.219.108s5.351-.02,7.219-.108a12.948,12.948,0,0,0,4.245-.812,8.684,8.684,0,0,0,3.1-2.015,8.473,8.473,0,0,0,2.015-3.1,13,13,0,0,0,.812-4.245c.088-1.868.108-2.465.108-7.219s-.02-5.351-.108-7.219a12.947,12.947,0,0,0-.812-4.245,8.684,8.684,0,0,0-2.015-3.1,8.473,8.473,0,0,0-3.1-2.015,13,13,0,0,0-4.245-.812c-1.868-.088-2.465-.108-7.219-.108Z"
+                                        transform="translate(0 0)" />
+                                    <path id="Caminho_59" data-name="Caminho 59"
+                                        d="M173.237,164.1a9.137,9.137,0,1,0,9.137,9.137A9.137,9.137,0,0,0,173.237,164.1Zm0,15.062a5.925,5.925,0,1,1,5.925-5.925A5.927,5.927,0,0,1,173.237,179.162Z"
+                                        transform="translate(-78.637 -78.637)" />
+                                    <circle id="Elipse_2" data-name="Elipse 2" cx="2.067" cy="2.067" r="2.067"
+                                        transform="translate(101.897 83.169)" />
+                                </g>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.facebook.com/eduardo.godoy.58910">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25.099" height="46.423"
+                                viewBox="0 0 25.099 46.423">
+                                <g id="facebook" transform="translate(-22.077)">
+                                    <path id="Caminho_60" data-name="Caminho 60"
+                                        d="M46.231.01,40.211,0C33.447,0,29.076,4.484,29.076,11.425v5.268H23.024a.947.947,0,0,0-.947.947v7.632a.947.947,0,0,0,.947.947h6.053V45.477a.946.946,0,0,0,.947.947h7.9a.947.947,0,0,0,.947-.947V26.218h7.077a.946.946,0,0,0,.947-.947l0-7.632a.947.947,0,0,0-.947-.947h-7.08V12.227c0-2.146.511-3.236,3.307-3.236H46.23a.946.946,0,0,0,.946-.947V.956A.947.947,0,0,0,46.231.01Z" />
+                                </g>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
                 <p>Todos os direitos reservados © - 2019</p>
             </div>
         </section>
     </footer>
+    <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="js/geral.js"></script>
+    <script src="js/slick.min.js"></script>
 </body>
 
 </html>
