Fix: Link mobile - Footer

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Eduardo Godoy</title>
+    <title>Eduardo Godoy | Desenvolvedor Front-end</title>
     <link rel="stylesheet" href="css/geral.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,900" rel="stylesheet" />
     <link rel="icon" type="image/png" href="imagens/js.png" sizes="32x32">
@@ -167,8 +167,17 @@
             <div class="e-footer__content">
                 <p>Eduardo Godoy - Desenvolvedor Front-end</p>
                 <p>Tecnologias utilizadas: SASS, HTML5 e JavaScript/ES6</p>
-                <p>Telefone: (11) 97238-4255</p>
-                <p>dudurossigodoy2010@gmail.com</p>
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=5511972384255&text=Oi%20Eduardo%20Godoy!">
+                    Telefone: <svg id="whatsapp" xmlns="http://www.w3.org/2000/svg" width="17.5" height="17.5"
+                        viewBox="0 0 17.5 17.5">
+                        <path id="Caminho_63" data-name="Caminho 63"
+                            d="M17.5,8.525A8.607,8.607,0,0,1,4.756,15.989L0,17.5l1.55-4.575a8.438,8.438,0,0,1-1.232-4.4,8.591,8.591,0,0,1,17.182,0ZM8.908,1.359A7.2,7.2,0,0,0,1.686,8.527a7.09,7.09,0,0,0,1.376,4.2l-.9,2.661,2.774-.882a7.231,7.231,0,0,0,11.2-5.982A7.2,7.2,0,0,0,8.908,1.359Zm4.339,9.129c-.054-.086-.194-.139-.4-.244S11.6,9.635,11.4,9.566s-.334-.106-.475.1-.543.68-.667.82-.245.157-.456.054A5.806,5.806,0,0,1,8.113,9.508,6.286,6.286,0,0,1,6.942,8.06c-.124-.209-.013-.322.092-.426s.211-.244.316-.367A1.393,1.393,0,0,0,7.56,6.92a.389.389,0,0,0-.018-.367C7.49,6.448,7.07,5.421,6.893,5s-.35-.349-.474-.349-.263-.017-.4-.017a.771.771,0,0,0-.561.26A2.338,2.338,0,0,0,4.719,6.64,4.04,4.04,0,0,0,5.578,8.8a8.625,8.625,0,0,0,3.6,3.155c2.142.836,2.142.557,2.527.522a2.124,2.124,0,0,0,1.421-.992A1.736,1.736,0,0,0,13.247,10.488Z" />
+                    </svg>
+                    (11) 97238-4255
+                </a><br />
+                <a target="_blank" href="mailto:dudurossigodoy2010@gmail.com">
+                    dudurossigodoy2010@gmail.com
+                </a>
                 <ul class="e-footer__content__social">
                     <li>
                         <a target="_blank" href="https://www.linkedin.com/in/eduardo-godoy-828221168/">
