--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Eduardo Godoy | Desenvolvedor Front-end</title>
+    <meta name="description" content="Portfólio Eduardo Godoy" >
     <link rel="stylesheet" href="css/geral.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,900" rel="stylesheet" />
     <link rel="icon" type="image/png" href="imagens/js.png" sizes="32x32">
