Fix: Fixing some issues

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sou Desenvolvedor Front-end na <a target="_blank"
                                 href="https://www.econverse.digital/">Econverse Digital</a> há menos de um ano e procuro
                             me atualizar diariamente ouvindo <span>poadcast</span> e fazendo cursos de programação na
-                            Alura. Realizo pequenos projetos para aplicar o conhecimento aprendido na prática e passar
+                            <span>Alura</span>. Realizo pequenos projetos para aplicar o conhecimento aprendido na prática e passar
                             por dificuldades no desenvolvimento para fixar o conhecimento que aprendi. Atualmente
                             estou estudando <span>NodeJS</span> para melhorar o meu conhecimento com Back-end e
                             <span>banco de dados</span> relacionais e não-relacionais.</p>
@@ -169,7 +169,7 @@
         <section class="e-footer">
             <div class="e-footer__content">
                 <p>Eduardo Godoy - Desenvolvedor Front-end</p>
-                <p>Tecnologias utilizadas: SASS, HTML5 e JavaScript/ES6</p>
+                <p>Tecnologias utilizadas: SASS, HTML5 e JavaScript/ES6/JQuery</p>
                 <a target="_blank" href="https://api.whatsapp.com/send?phone=5511972384255&text=Oi%20Eduardo%20Godoy!">
                     Telefone: <svg id="whatsapp" xmlns="http://www.w3.org/2000/svg" width="17.5" height="17.5"
                         viewBox="0 0 17.5 17.5">
