Fix: Final Adjusts

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Eduardo Godoy | Desenvolvedor Front-end</title>
-    <meta name="description" content="Portfólio - Eduardo Godoy" >
+    <meta name="description" content="Portfólio - Eduardo Godoy">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,900" rel="stylesheet" />
     <link rel="icon" type="image/png" href="imagens/js.png" sizes="32x32">
-    <!-- build:css css/geral.min.css -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155563931-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155563931-1');
+    </script>
     <link rel="stylesheet" href="css/geral.css">
-    <!-- endbuild -->
 </head>
 
 <body>
@@ -54,12 +61,14 @@
                     </div>
                     <div class="e-about__content__right">
                         <span>Sobre mim</span>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sou Desenvolvedor Front-end na <a target="_blank"
-                                href="https://www.econverse.digital/">Econverse Digital</a> há menos de um ano e procuro
-                            me atualizar diariamente ouvindo <span>poadcast</span> e fazendo cursos de programação na
-                            <span>Alura</span>. Realizo pequenos projetos para aplicar o conhecimento aprendido na prática e passar
-                            por dificuldades no desenvolvimento para fixar o conhecimento que aprendi. Atualmente
-                            estou estudando <span>NodeJS</span> para melhorar o meu conhecimento com Back-end e
+                        <p>Desenvolvedor Front-end na <a target="_blank" href="https://www.econverse.digital/">Econverse
+                                Digital</a> há quase um ano, procuro
+                            me atualizar diariamente através de <span>podcasts</span> enriquecendo meus conhecimentos
+                            na área de programação, por meio da plataforma de ensino da
+                            <span>Alura</span>. Desenvolvo projetos, colocando em prática todo o
+                            conhecimento adquirido, pesquisando minuciosamente, os problemas que acontecem nos mesmos.
+                            Atualmente, estou estudando <span>NodeJS</span> para melhorar meu conhecimento na área de
+                            Back-end e
                             <span>banco de dados</span> relacionais e não-relacionais.</p>
                     </div>
                 </div>
@@ -75,12 +84,6 @@
                             <strong>Limpa Aí</strong>
                             <p>Projeto desenvolvido no meu TCC com JPA</p>
                             <a target="_blank" href="https://www.limpaai.com.br/">Ver Projeto</a>
-                        </li>
-                        <li class="e-projects__content__list__item">
-                            <img src="imagens/nestle.png" />
-                            <strong>Nestlé</strong>
-                            <p>Projeto desenvolvido na plataforma VTEX</p>
-                            <a target="_blank" href="https://www.nestle.com.br/">Ver Projeto</a>
                         </li>
                         <li class="e-projects__content__list__item">
                             <img src="imagens/puket.png" />
@@ -99,6 +102,12 @@
                             <strong>Bagaggio</strong>
                             <p>Projeto desenvolvido na plataforma VTEX</p>
                             <a target="_blank" href="https://www.bagaggio.com.br/">Ver Projeto</a>
+                        </li>
+                        <li class="e-projects__content__list__item">
+                            <img src="imagens/myahaas.png" />
+                            <strong>Mya Haas</strong>
+                            <p>Projeto desenvolvido na plataforma VTEX</p>
+                            <a target="_blank" href="https://www.myahaas.com.br/">Ver Projeto</a>
                         </li>
                         <li class="e-projects__content__list__item">
                             <img src="imagens/manias-maria.png" />
@@ -244,9 +253,7 @@
         </section>
     </footer>
     <script src="js/jquery-3.3.1.min.js"></script>
-    <!-- build:js js/geral.min.js -->
     <script src="js/geral.js"></script>
-    <!-- endbuild -->
     <script src="js/slick.min.js"></script>
 </body>
 
